--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,12 @@ thiserror = "1"
 
 futures-util = "0.3"
 
+utoipa = "4"
+utoipa-swagger-ui = { version = "6", features = ["axum"] }
+
+anyhow = "1"
+
+
 [[bin]]
 name = "axum-mongo-app"
 path = "src/main.rs"
