--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ tower = "0.4"
 tower-http = { version = "0.5", features = ["cors", "trace"] }
 
 tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
 
 uuid = { version = "1", features = ["v4"] }
 thiserror = "1"
